// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQ Component renders with custom props correctly 1`] = `
<div>
  <section
    class="bg-background py-12"
  >
    <div
      class="container mx-auto px-4 md:px-6 lg:px-8 max-w-3xl"
    >
      <h2
        class="text-2xl md:text-3xl font-semibold text-center mb-8 text-white"
      >
        Custom FAQ Heading
      </h2>
      <div
        data-testid="faq-accordion"
      >
        <div>
          FAQ Items: 
          1
        </div>
        <div>
          <div
            data-testid="faq-item-0"
          >
            <div>
              Question: 
              Custom question?
            </div>
            <div>
              Answer: 
              Custom answer.
            </div>
          </div>
        </div>
        <button
          data-testid="ask-button"
        >
          Custom Ask Button
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`FAQ Component renders with default props correctly 1`] = `
<div>
  <section
    class="bg-background py-12"
  >
    <div
      class="container mx-auto px-4 md:px-6 lg:px-8 max-w-3xl"
    >
      <h2
        class="text-2xl md:text-3xl font-semibold text-center mb-8 text-white"
      >
        Часто задаваемые вопросы
      </h2>
      <div
        data-testid="faq-accordion"
      >
        <div>
          FAQ Items: 
          4
        </div>
        <div>
          <div
            data-testid="faq-item-0"
          >
            <div>
              Question: 
              Каковы сроки доставки запчастей из Китая?
            </div>
            <div>
              Answer: 
              Стандартный срок доставки запчастей составляет 7-14 дней. Точный срок зависит от наличия детали у наших партнеров в Китае, сложности ее поиска и логистических особенностей. В экстренных случаях возможна ускоренная доставка за дополнительную плату.
            </div>
          </div>
          <div
            data-testid="faq-item-1"
          >
            <div>
              Question: 
              Насколько качественны аналоги запчастей?
            </div>
            <div>
              Answer: 
              Мы поставляем только качественные аналоги, произведенные на сертифицированных заводах в Китае. По своим техническим характеристикам и надежности они сопоставимы с оригинальными запчастями, при этом стоят значительно дешевле. На все запчасти предоставляется гарантия.
            </div>
          </div>
          <div
            data-testid="faq-item-2"
          >
            <div>
              Question: 
              Какие способы оплаты вы принимаете?
            </div>
            <div>
              Answer: 
              Мы работаем как с наличным, так и с безналичным расчетом. Для юридических лиц доступна оплата по счету с НДС. Обычно мы работаем по предоплате 50%, остаток – перед отгрузкой товара. Для постоянных клиентов возможны индивидуальные условия оплаты.
            </div>
          </div>
          <div
            data-testid="faq-item-3"
          >
            <div>
              Question: 
              Что делать, если нужна очень редкая запчасть?
            </div>
            <div>
              Answer: 
              Мы специализируемся на поиске редких и труднодоступных деталей. Наши партнеры в Китае имеют доступ к широкой сети производителей и складов. Даже если запчасть отсутствует в наличии, во многих случаях возможно её изготовление под заказ. Для таких случаев мы рекомендуем предоставить нам максимум информации о детали, включая фото, артикул и модель техники.
            </div>
          </div>
        </div>
        <button
          data-testid="ask-button"
        >
          Задать свой вопрос
        </button>
      </div>
    </div>
  </section>
</div>
`;
